samples/_failures_safe/1761403311_2ad60b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aa1ea2c8.c: In function ‘main’:
./samples/SAFE/__tmp_aa1ea2c8.c:155:28: error: missing terminating " character
  155 |                     printf("Result of A * B
      |                            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aa1ea2c8.c:155:21: error: expected expression at end of input
  155 |                     printf("Result of A * B
      |                     ^~~~~~
./samples/SAFE/__tmp_aa1ea2c8.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa1ea2c8.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa1ea2c8.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aa1ea2c8.c:155:21: error: expected declaration or statement at end of input
